--- a/book/print.html
+++ b/book/print.html
@@ -97,7 +97,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="chapter_1.html"><strong aria-hidden="true">1.</strong> Vesti 언어에 대하여</a></li><li class="chapter-item expanded "><a href="chapter_2.html"><strong aria-hidden="true">2.</strong> Vesti 설치법</a></li><li class="chapter-item expanded "><a href="Chapter3/chapter_3.html"><strong aria-hidden="true">3.</strong> Vesti 문법</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Chapter3/about_documentclass.html"><strong aria-hidden="true">3.1.</strong> documentclass 작성</a></li><li class="chapter-item expanded "><a href="Chapter3/about_usepackages.html"><strong aria-hidden="true">3.2.</strong> usepackage 작성</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="chapter_1.html"><strong aria-hidden="true">1.</strong> Vesti 언어에 대하여</a></li><li class="chapter-item expanded "><a href="chapter_2.html"><strong aria-hidden="true">2.</strong> Vesti 설치법</a></li><li class="chapter-item expanded "><a href="Chapter3/chapter_3.html"><strong aria-hidden="true">3.</strong> Vesti 문법</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Chapter3/about_documentclass.html"><strong aria-hidden="true">3.1.</strong> documentclass 작성</a></li><li class="chapter-item expanded "><a href="Chapter3/about_usepackages.html"><strong aria-hidden="true">3.2.</strong> usepackage 작성</a></li><li class="chapter-item expanded "><a href="Chapter3/about_comment.html"><strong aria-hidden="true">3.3.</strong> 코맨트에 대하여</a></li><li class="chapter-item expanded "><a href="Chapter3/document_keyword.html"><strong aria-hidden="true">3.4.</strong> document 키워드</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -199,7 +199,7 @@ import { amsmath, amsthm, amssymb, array, tikz }
 #+#
 \title{Test Document}
 \article{John Doe}
-\date{\today}\/
+\date{\today}
 #+#
 
 document
@@ -281,6 +281,56 @@ import {
 }
 </code></pre>
 <p>물론 여러 패키지들을 불러올 때 어느 것을 쓰더라도 상관이 없다. 다만 마지막 방법을 이용하여 모든 패키지들을 한번에 관리하는 것을 추천한다.</p>
+<h1><a class="header" href="#코맨트에-대하여" id="코맨트에-대하여">코맨트에 대하여</a></h1>
+<p>Vesti언어에는 크게 두 종류의 코맨트가 있다. 보통 코맨트는 <code>#</code>을 이용한다. 다음과 같이 말이다.</p>
+<pre><code># 이 다음부터는 실제 LaTeX 코드에는 들어가지 않는다.
+하지만 이 부분은 실제로 LaTeX 코드에 들어간다.
+# 다시 이 부분은 들어가지 않는다.
+</code></pre>
+<p>만일 여러줄을 코맨트하고 싶을 때에는 물론 일일히 앞에 <code>#</code>을 붙여도 되지만, 아래와 같이 입력을 해도 된다.</p>
+<pre><code>#*
+위처럼 넣게 되면 이 다음부터는 쭉
+실제 LaTeX 코드에
+반영이 되지
+않는다.
+*#
+이제 이 부분은 실제 코드에 들어간다.
+</code></pre>
+<p>만일 실제 #을 출력하고 싶다면 <code>\#</code>을 넣으면 된다.</p>
+<h1><a class="header" href="#document-키워드" id="document-키워드">Document 키워드</a></h1>
+<p>Vesti에 있는 키워드 중 우리는 앞에서 <code>docclass</code>와 <code>import</code>키워드를 보았다.
+이제 가장 중요한 키워드인 <code>document</code> 키워드에 대하여 알아보도록 하자.</p>
+<p>LaTeX에서 <code>\begin{document}</code>는 문서의 시작을 알리는 부분이다. 저 명령어를 기준으로 윗부분은 보통 문서의 설정들을 넣고, 아래 부분은 실제 문서 내용을 넣는다. 아래 예시로 더 쉽게 알 수 있다.</p>
+<pre><code class="language-latex">\documentclass{article}
+
+% 가장 중요한 부분으로 이 키워드가 없으면 LaTeX은 에러를 뱉는다.
+% 거의 대부분 (그 몇몇 예외는 신경쓰지 않아도 된다.)
+\begin{document}
+This is a \LaTeX.
+\end{document}
+</code></pre>
+<p>Vesti에서 <code>document</code>가 바로 LaTeX에서의 <code>\begin{document}</code>와 동일하다. Vesti의 경우에는 <code>document</code>키워드 윗쪽으로는 문서의 설정들을 넣고, 아래로는 실제 문서 내용을 집어 넣도록 되어있다. 이 때, <code>docclass</code>, <code>import</code>, <code>document</code>키워드를 <code>document</code>키워드 아래에 적게 될 경우, 키워드로 작동하지 않고, 단순히 그 단어들이 된다.</p>
+<p>예를 들어 아래의 vesti 코드</p>
+<pre><code>docclass article
+document
+docclass article
+import {
+    amsmath,
+    tikz
+}
+</code></pre>
+<p>는 LaTeX 코드</p>
+<pre><code>\documentclass{article}
+\begin{doccument}
+docclass article
+import {
+    amsmath,
+    tikz
+}
+
+\end{document}
+</code></pre>
+<p>와 같다.</p>
 
                     </main>
 
