--- a/book/print.html
+++ b/book/print.html
@@ -296,7 +296,7 @@ import {
 *#
 이제 이 부분은 실제 코드에 들어간다.
 </code></pre>
-<p>만일 실제 #을 출력하고 싶다면 <code>\#</code>을 넣으면 된다. aaa</p>
+<p>만일 실제 #을 출력하고 싶다면 <code>\#</code>을 넣으면 된다.</p>
 <h1><a class="header" href="#document-키워드" id="document-키워드">Document 키워드</a></h1>
 <p>Vesti에 있는 키워드 중 우리는 앞에서 <code>docclass</code>와 <code>import</code>키워드를 보았다.
 이제 가장 중요한 키워드인 <code>document</code> 키워드에 대하여 알아보도록 하자.</p>
