--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="chapter_1.html"><strong aria-hidden="true">1.</strong> Vesti 언어에 대하여</a></li><li class="chapter-item expanded "><a href="chapter_2.html"><strong aria-hidden="true">2.</strong> Vesti 설치법</a></li><li class="chapter-item expanded "><a href="Chapter3/chapter_3.html"><strong aria-hidden="true">3.</strong> Vesti 문법</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Chapter3/about_documentclass.html"><strong aria-hidden="true">3.1.</strong> documentclass 작성</a></li><li class="chapter-item expanded "><a href="Chapter3/about_usepackages.html"><strong aria-hidden="true">3.2.</strong> usepackage 작성</a></li><li class="chapter-item expanded "><a href="Chapter3/about_comment.html"><strong aria-hidden="true">3.3.</strong> 코맨트에 대하여</a></li><li class="chapter-item expanded "><a href="Chapter3/document_keyword.html"><strong aria-hidden="true">3.4.</strong> document 키워드</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="chapter_1.html"><strong aria-hidden="true">1.</strong> Vesti 언어에 대하여</a></li><li class="chapter-item expanded "><a href="chapter_2.html"><strong aria-hidden="true">2.</strong> Vesti 설치법</a></li><li class="chapter-item expanded "><a href="Chapter3/chapter_3.html"><strong aria-hidden="true">3.</strong> Vesti 문법</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Chapter3/about_documentclass.html"><strong aria-hidden="true">3.1.</strong> documentclass 작성</a></li><li class="chapter-item expanded "><a href="Chapter3/about_usepackages.html"><strong aria-hidden="true">3.2.</strong> usepackage 작성</a></li><li class="chapter-item expanded "><a href="Chapter3/about_comment.html"><strong aria-hidden="true">3.3.</strong> 코맨트에 대하여</a></li><li class="chapter-item expanded "><a href="Chapter3/document_keyword.html"><strong aria-hidden="true">3.4.</strong> document 키워드</a></li><li class="chapter-item expanded "><a href="Chapter3/raw_latex.html"><strong aria-hidden="true">3.5.</strong> LaTeX코드를 넣기</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -167,19 +167,22 @@
 <p>보통 문서를 만든다고 한다면 적어도 필자는 LaTeX을 필수적으로 사용한다.
 또한 적어도 필자는 LaTeX를 엄청 잘 치지는 않지만 그렇다고 엄청 못치는 편은 아니라고 생각한다. 하지만 LaTeX을 쓰면서 느낀점은 문법이 많이 인체공학적이지 않다는 것이다.
 다음 코드를 먼저 한번 보도록 해보자.</p>
-<pre><code class="language-latex">\documentclass[twocolumn]{article}
-\usepackage{amsmath, amsthm, amssymb}
+<pre><code class="language-latex">\documentclass{article}
+\usepackage{amsmath}
+\usepackage{amsthm}
+\usepackage{amssymb}
 \usepackage{array}
 \usepackage{tikz}
 
-\title{Test document}
+\title{Test Document}
 \article{John Doe}
 \date{\today}
 
 \begin{document}
 This is a plain \LaTeX\ document.
+This works well!
 \begin{center}
-    \begin{minipage}{0.4\textwidth}
+    \begin{minipage}{.4\textwidth}
         This is a plain \LaTeX\ document.
     \end{minipage}
     \hspace{1pc}
@@ -187,18 +190,17 @@ This is a plain \LaTeX\ document.
         This is a plain \LaTeX\ document.
     \end{minipage}
 \end{center}
+
 \end{document}
 </code></pre>
 <p>아주 전형적인 코드이다. 평소 LaTeX만 쓴 사람이라면 그냥 자연스럽게 칠 것인데 스니펫(snippet)없이는 환경을 일일히 쓰는 것이 여간 귀찮은 일이 아니다.</p>
 <p><code>vesti</code>는 이를 조금 더 쉽게 쓰기 위하여 고안한 문법이다. 대체적으로 LaTeX 문법을 가져왔지만 몇몇 경우를 조금 더 쓰기 쉽게 만들었다. 아래는 <code>vesti</code> 코드로 위의 LaTeX 코드와 같은 코드를 적은 것이다.</p>
 <pre><code>docclass article (twocolumn)
-import { amsmath, amsthm, amssymb, array, tikz }
+import { amsmath amsthm amssymb array tikz }
 
-##+
 \title{Test Document}
 \article{John Doe}
 \date{\today}
-+##
 
 document
 This is a plain \LaTeX\ document.
@@ -213,7 +215,7 @@ begenv center
 endenv
 </code></pre>
 <p>Vesti의 첫 번째 목적은 기존 LaTeX에서의 몇몇 문법을 개량하여 보다 쓰기 쉽게 만들고자 하는 것이며, 두 번째 목적은 macro라는 개념을 넣어 보다 쉽게 문서를 만들 수 있게 하는 것이다.</p>
-<p>현재의 vesti는 아직 베타버전에 머물러있다. 기본적인 번역은 되지만 예상치 못한 버그들이 있을 수 있으므로 착오 없길 바란다. 또한 아직은 macro가 없다. 따라서 LaTeX command나 environment를 만들고자 한다면 <a href="./chapter_2.html">여기</a>를 보길 바란다.</p>
+<p>현재의 vesti는 아직 알파버전에 머물러있다. 기본적인 번역은 되지만 예상치 못한 버그들이 있을 수 있으므로 착오 없길 바란다. 또한 아직은 macro가 존재하지 않는다.</p>
 
                     </main>
 
