--- a/print.html
+++ b/print.html
@@ -97,7 +97,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="chapter_1.html"><strong aria-hidden="true">1.</strong> Vesti 언어에 대하여</a></li><li class="chapter-item expanded "><a href="chapter_2.html"><strong aria-hidden="true">2.</strong> Vesti 설치법</a></li><li class="chapter-item expanded "><a href="Chapter3/chapter_3.html"><strong aria-hidden="true">3.</strong> Vesti 문법</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Chapter3/about_documentclass.html"><strong aria-hidden="true">3.1.</strong> documentclass 작성</a></li><li class="chapter-item expanded "><a href="Chapter3/about_usepackages.html"><strong aria-hidden="true">3.2.</strong> usepackage 작성</a></li><li class="chapter-item expanded "><a href="Chapter3/about_comment.html"><strong aria-hidden="true">3.3.</strong> 코맨트에 대하여</a></li><li class="chapter-item expanded "><a href="Chapter3/document_keyword.html"><strong aria-hidden="true">3.4.</strong> document 키워드</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="chapter_1.html"><strong aria-hidden="true">1.</strong> Vesti 언어에 대하여</a></li><li class="chapter-item expanded "><a href="chapter_2.html"><strong aria-hidden="true">2.</strong> Vesti 설치법</a></li><li class="chapter-item expanded "><a href="Chapter3/chapter_3.html"><strong aria-hidden="true">3.</strong> Vesti 문법</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Chapter3/about_documentclass.html"><strong aria-hidden="true">3.1.</strong> documentclass 작성</a></li><li class="chapter-item expanded "><a href="Chapter3/about_usepackages.html"><strong aria-hidden="true">3.2.</strong> usepackage 작성</a></li><li class="chapter-item expanded "><a href="Chapter3/about_comment.html"><strong aria-hidden="true">3.3.</strong> 코맨트에 대하여</a></li><li class="chapter-item expanded "><a href="Chapter3/document_keyword.html"><strong aria-hidden="true">3.4.</strong> document 키워드</a></li><li class="chapter-item expanded "><a href="Chapter3/raw_latex.html"><strong aria-hidden="true">3.5.</strong> LaTeX코드를 넣기</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -169,19 +169,22 @@
 <p>보통 문서를 만든다고 한다면 적어도 필자는 LaTeX을 필수적으로 사용한다.
 또한 적어도 필자는 LaTeX를 엄청 잘 치지는 않지만 그렇다고 엄청 못치는 편은 아니라고 생각한다. 하지만 LaTeX을 쓰면서 느낀점은 문법이 많이 인체공학적이지 않다는 것이다.
 다음 코드를 먼저 한번 보도록 해보자.</p>
-<pre><code class="language-latex">\documentclass[twocolumn]{article}
-\usepackage{amsmath, amsthm, amssymb}
+<pre><code class="language-latex">\documentclass{article}
+\usepackage{amsmath}
+\usepackage{amsthm}
+\usepackage{amssymb}
 \usepackage{array}
 \usepackage{tikz}
 
-\title{Test document}
+\title{Test Document}
 \article{John Doe}
 \date{\today}
 
 \begin{document}
 This is a plain \LaTeX\ document.
+This works well!
 \begin{center}
-    \begin{minipage}{0.4\textwidth}
+    \begin{minipage}{.4\textwidth}
         This is a plain \LaTeX\ document.
     \end{minipage}
     \hspace{1pc}
@@ -189,18 +192,17 @@ This is a plain \LaTeX\ document.
         This is a plain \LaTeX\ document.
     \end{minipage}
 \end{center}
+
 \end{document}
 </code></pre>
 <p>아주 전형적인 코드이다. 평소 LaTeX만 쓴 사람이라면 그냥 자연스럽게 칠 것인데 스니펫(snippet)없이는 환경을 일일히 쓰는 것이 여간 귀찮은 일이 아니다.</p>
 <p><code>vesti</code>는 이를 조금 더 쉽게 쓰기 위하여 고안한 문법이다. 대체적으로 LaTeX 문법을 가져왔지만 몇몇 경우를 조금 더 쓰기 쉽게 만들었다. 아래는 <code>vesti</code> 코드로 위의 LaTeX 코드와 같은 코드를 적은 것이다.</p>
 <pre><code>docclass article (twocolumn)
-import { amsmath, amsthm, amssymb, array, tikz }
+import { amsmath amsthm amssymb array tikz }
 
-##+
 \title{Test Document}
 \article{John Doe}
 \date{\today}
-+##
 
 document
 This is a plain \LaTeX\ document.
@@ -215,7 +217,7 @@ begenv center
 endenv
 </code></pre>
 <p>Vesti의 첫 번째 목적은 기존 LaTeX에서의 몇몇 문법을 개량하여 보다 쓰기 쉽게 만들고자 하는 것이며, 두 번째 목적은 macro라는 개념을 넣어 보다 쉽게 문서를 만들 수 있게 하는 것이다.</p>
-<p>현재의 vesti는 아직 베타버전에 머물러있다. 기본적인 번역은 되지만 예상치 못한 버그들이 있을 수 있으므로 착오 없길 바란다. 또한 아직은 macro가 없다. 따라서 LaTeX command나 environment를 만들고자 한다면 <a href="./chapter_2.html">여기</a>를 보길 바란다.</p>
+<p>현재의 vesti는 아직 알파버전에 머물러있다. 기본적인 번역은 되지만 예상치 못한 버그들이 있을 수 있으므로 착오 없길 바란다. 또한 아직은 macro가 존재하지 않는다.</p>
 <h1 id="vesti-설치"><a class="header" href="#vesti-설치">Vesti 설치</a></h1>
 <h2 id="참고"><a class="header" href="#참고">참고</a></h2>
 <p>현재 <code>vesti</code>는 github에 저장되어 있다. 따라서 아직은 설치하는 방법이 github에서 직접 가져오는 것 밖에는 없다.
@@ -276,7 +278,7 @@ import {
 이제 이 부분은 실제 코드에 들어간다.
 </code></pre>
 <p>LaTeX에서는 일반적으로 <code>#</code>은 명령어나 낮은 수준의 TeX 표를 만들 때에 쓴다.
-그러한 <code>#</code>은 <code>\?</code>으로 만들 수 있고,
+그러한 <code>#</code>은 <code>#!</code>으로 만들 수 있고,
 만일 LaTeX에서 정말로 <code>\#</code>을 출력하고 싶다면 vesti에서 <code>\#</code>을 넣으면 된다.</p>
 <h1 id="document-키워드"><a class="header" href="#document-키워드">Document 키워드</a></h1>
 <p>Vesti에 있는 키워드 중 우리는 앞에서 <code>docclass</code>와 <code>import</code>키워드를 보았다.
@@ -293,26 +295,78 @@ This is a \LaTeX.
 <p>Vesti에서 <code>document</code>가 바로 LaTeX에서의 <code>\begin{document}</code>와 동일하다. Vesti의 경우에는 <code>document</code>키워드 윗쪽으로는 문서의 설정들을 넣고, 아래로는 실제 문서 내용을 집어 넣도록 되어있다. 이 때, <code>docclass</code>, <code>import</code>, <code>document</code>키워드를 <code>document</code>키워드 아래에 적게 될 경우, 키워드로 작동하지 않고, 단순히 그 단어들이 된다.</p>
 <p>예를 들어 아래의 vesti 코드</p>
 <pre><code>docclass article
+import { amsmath tikz }
 document
 docclass article
-import {
-    amsmath,
-    tikz
-}
+import { amsmath tikz }
 </code></pre>
 <p>는 LaTeX 코드</p>
 <pre><code>\documentclass{article}
-\begin{doccument}
+\usepackage{amsmath}
+\usepackage{tikz}
+\begin{document}
 docclass article
-import {
-    amsmath,
-    tikz
-}
-
+import { amsmath tikz }
 \end{document}
 </code></pre>
 <p>와 같다.</p>
 <p>여기서 알 수 있는 한가지 더는 바로 vesti는 따로 <code>\end{document}</code>가 없다는 점이다. 하지만 컴파일된 LaTeX 코드에는 올바르게 <code>\end{document}</code>가 들어있다는 것이다. 이러한 문법 덕분에 코드를 써내려갈 적에 맨 밑에 있던 걸리적거리는 <code>\end{document}</code>를 보지 않아도 된다는 것이다.</p>
+<p>아무리 vesti가 레이텍 문법을 개선시켰다 하더라도 몇몇 특수한 상황이나
+vesti가 아직 그렇게 똑똑하게 파싱을 하지 못해서 잘못된 결과가 나올 수 있다.
+지금 이 문서를 쓰고 있는 시점 (2021/03/14)에서는 아직 LaTeX3문법을 호환하지 않아
+다음과 같이 써버리면 바로 파싱 에러가 난다.</p>
+<pre><code class="language-latex">\ExplSyntaxOn
+\cs_undefine:N \lemma
+\cs_undefine:N \proof
+\ExplSyntaxOff
+</code></pre>
+<p>그 이유는 뒷장에서 다시 이야기를 할 것이지만 vesti에서 레이텍 함수를 입력할 때에 쓸 수 있는 문자에는 <code>_</code>는 들어있지 않기 때문이다.</p>
+<p>이를 해결하기 위해서 vesti는 <code>#-</code>, <code>-#</code>, <code>##-</code>, <code>-##</code>의 네 개의 토큰을 지원한다.
+이를 이용하여 문법을 고쳐보면 다음과 같은 두 가지 방법이 존재한다.</p>
+<ul>
+<li><code>#-</code>와 <code>-#</code>을 이용하는 방법 (띄어쓰기 여부는 상관이 없다)</li>
+</ul>
+<pre><code>\ExplSyntaxOn
+#- \cs_undefine:N \lemma -#
+#-\cs_undefine:N \proof-#
+\ExplSyntaxOff
+</code></pre>
+<ul>
+<li><code>##-</code>와 <code>-##</code>을 이용하는 방법</li>
+</ul>
+<pre><code>\ExplSyntaxOn
+##-
+\cs_undefine:N \lemma
+\cs_undefine:N \proof
+-##
+\ExplSyntaxOff
+</code></pre>
+<p>위의 예시에서 볼 수 있듯이 <code>#-</code>와 <code>-#</code>가 하나의 짝이고, <code>##-</code>와 <code>-##</code>가 다른 짝이다.
+각각의 차이점은 한줄으로만 쓸 수 있다는 것과 여려줄을 통채로 묶을 수 있다는 차이가 있다.</p>
+<p>각각으로 둘러쌓여있으면 vesti는 그 안에 있는 토큰들을 <strong>글자 그대로</strong> 출력해준다.
+따라서 위의 결과는 아래와 같이 된다.</p>
+<pre><code>\ExplSyntaxOn
+\cs_undefine:N \lemma
+\cs_undefine:N \proof
+\ExplSyntaxOff
+</code></pre>
+<p>이는 다른 방법으로도 쓸 수 있다.
+만일 패키지 이름이 <code>import</code>인 경우에는 어떻게 하는가?
+당연히 아래와 같이 쓰면 안된다.</p>
+<pre><code>docclass article
+import import
+
+document
+Hello World!
+</code></pre>
+<p>왜냐하면 <code>import</code>는 vesti에서는 <code>document</code>키워드 앞에서는 키워드이기 때문이다.
+따라서 다음과 같이 입력해야 한다.</p>
+<pre><code>docclass article
+import #-import-#
+
+document
+Hello World!
+</code></pre>
 
                     </main>
 
