deploy: 33a435d98c618d9c49e422fe5287fc1d17e4edd0

--- a/print.html
+++ b/print.html
@@ -255,9 +255,9 @@ import geometry (a4paper, margin = 0.4\textwidth)
 
 # 마지막 방법 (일반인 경우: 패키지들이 많을 때)
 import {
-    amsmath, amsthm, amssymb,
-    tikz,
-    geometry (a4paper, margin = 0.4\textwidth),
+    amsmath amsthm amssymb
+    tikz
+    geometry (a4paper, margin = 0.4\textwidth)
     array
 }
 </code></pre>
